[gd_scene load_steps=4 format=3 uid="uid://bl838siokypw"]

[ext_resource type="Texture2D" uid="uid://coqciqvigxu7r" path="res://Art/Arms/Up.png" id="1_obdvu"]
[ext_resource type="Script" uid="uid://cmixal5ngo6t" path="res://buttons.gd" id="1_q22n2"]
[ext_resource type="Texture2D" uid="uid://dge5rej1syuga" path="res://Art/Arms/Side.png" id="2_q22n2"]

[node name="Buttons" type="Node2D"]
script = ExtResource("1_q22n2")
metadata/_edit_group_ = true

[node name="Up" type="Area2D" parent="."]
z_index = 2
position = Vector2(573, 486)
scale = Vector2(0.345, 0.345)

[node name="BG" type="Sprite2D" parent="Up"]
modulate = Color(69.061, 69.614, 1, 0)
scale = Vector2(1.045, 1.045)
texture = ExtResource("1_obdvu")

[node name="Sprite2D" type="Sprite2D" parent="Up"]
texture = ExtResource("1_obdvu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Up"]
visible = false
polygon = PackedVector2Array(-1.9, -119.5, -20, -119.5, -25.1, -110.5, -27, -110.5, -28, -63.5, -28, -58.3, -32.2, -62.5, -44.9, -62.5, -60, -44.2, -60, -43, -74.3, -38.5, -77.1, -38.5, -79.1, -35.5, -80.9, -35.5, -82, -19.6, -82, -12.8, -77, -7, -83.4, -5.5, -87.2, -5.5, -89, -1.9, -89, 36.6, -84, 53.7, -84, 59.2, -81, 63.1, -81, 67.3, -64.9, 84.5, -58, 114.9, -58, 119.5, -22.7, 119.5, -16.7, 117.5, -9.6, 117.5, 20.3, 104.5, 23, 104.5, 28, 98.2, 28, 91.1, 20.7, 72.4, 23, 68, 23, 66.3, 33.8, 55.5, 35.2, 55.5, 54, 21, 54, 19.1, 76, -8.8, 76, -10.6, 88.7, -20.5, 89, -36.3, 86, -39.3, 86, -41.5, 60.2, -41.5, 36.3, -20.5, 34.8, -20.5, 30, -12, 30, -10.3, 20.7, -1.1, 19.3, -1.5, 17.2, -1.5, 9.2, -17.5, 10, -33.4, 10, -57.7, 7, -74.8, 7, -90.8, 1, -112.5, 1, -117.6)

[node name="Down" type="Area2D" parent="."]
z_index = 2
position = Vector2(559, 591)
rotation = 3.14159
scale = Vector2(0.345, 0.345)

[node name="BG" type="Sprite2D" parent="Down"]
modulate = Color(69.061, 69.614, 1, 0)
scale = Vector2(1.045, 1.045)
texture = ExtResource("1_obdvu")

[node name="Sprite2D" type="Sprite2D" parent="Down"]
texture = ExtResource("1_obdvu")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Down"]
visible = false
polygon = PackedVector2Array(-1.9, -119.5, -20, -119.5, -25.1, -110.5, -27, -110.5, -28, -63.5, -28, -58.3, -32.2, -62.5, -44.9, -62.5, -60, -44.2, -60, -43, -74.3, -38.5, -77.1, -38.5, -79.1, -35.5, -80.9, -35.5, -82, -19.6, -82, -12.8, -77, -7, -83.4, -5.5, -87.2, -5.5, -89, -1.9, -89, 36.6, -84, 53.7, -84, 59.2, -81, 63.1, -81, 67.3, -64.9, 84.5, -58, 114.9, -58, 119.5, -22.7, 119.5, -16.7, 117.5, -9.6, 117.5, 20.3, 104.5, 23, 104.5, 28, 98.2, 28, 91.1, 20.7, 72.4, 23, 68, 23, 66.3, 33.8, 55.5, 35.2, 55.5, 54, 21, 54, 19.1, 76, -8.8, 76, -10.6, 88.7, -20.5, 89, -36.3, 86, -39.3, 86, -41.5, 60.2, -41.5, 36.3, -20.5, 34.8, -20.5, 30, -12, 30, -10.3, 20.7, -1.1, 19.3, -1.5, 17.2, -1.5, 9.2, -17.5, 10, -33.4, 10, -57.7, 7, -74.8, 7, -90.8, 1, -112.5, 1, -117.6)

[node name="Left" type="Area2D" parent="."]
z_index = 2
position = Vector2(498, 547)
scale = Vector2(0.345, 0.345)

[node name="BG" type="Sprite2D" parent="Left"]
modulate = Color(69.061, 69.614, 1, 0)
scale = Vector2(1.045, 1.045)
texture = ExtResource("2_q22n2")

[node name="Sprite2D" type="Sprite2D" parent="Left"]
texture = ExtResource("2_q22n2")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Left"]
visible = false
polygon = PackedVector2Array(-15, -96.1, -15, -94.8, -22.2, -94, -27.3, -94, -78.1, -80, -84.3, -80, -115, -69.4, -139.1, -69, -141.1, -66, -143.2, -66, -142, -52.8, -142, -50.2, -137, -45.2, -137, -43.4, -128, -41.4, -128, -40.4, -122.2, -39, -107.9, -39, -75.8, -43, -66, -43, -66, -17.6, -58, 1.3, -58, 4, -28.6, 25, -25.2, 25, -30, 31, -31.5, 31, -35.5, 45, -37, 45, -37, 54.5, -26, 73.4, -26, 76, -7.89999, 76, -1, 64.6, -1, 64, 47, 29, 47, 28.2, 84, 12.3, 84, 11.4, 91.3, 9, 95.3, 9, 108.3, 20, 117, 20, 133, 0, 134.5, 0, 140.5, -21, 142, -21, 142, -49.5, 138, -57.5, 138, -61.2, 134, -63.3, 134, -64.5, 106.3, -72, 95.3, -72, 35, -91.5, 35, -92.9)

[node name="Right" type="Area2D" parent="."]
z_index = 2
position = Vector2(632, 546)
scale = Vector2(-0.345, 0.345)

[node name="BG" type="Sprite2D" parent="Right"]
modulate = Color(69.061, 69.614, 1, 0)
scale = Vector2(1.045, 1.045)
texture = ExtResource("2_q22n2")

[node name="Sprite2D" type="Sprite2D" parent="Right"]
texture = ExtResource("2_q22n2")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Right"]
visible = false
polygon = PackedVector2Array(-15, -96.1, -15, -94.8, -22.2, -94, -27.3, -94, -78.1, -80, -84.3, -80, -115, -69.4, -139.1, -69, -141.1, -66, -143.2, -66, -142, -52.8, -142, -50.2, -137, -45.2, -137, -43.4, -128, -41.4, -128, -40.4, -122.2, -39, -107.9, -39, -75.8, -43, -66, -43, -66, -17.6, -58, 1.3, -58, 4, -28.6, 25, -25.2, 25, -30, 31, -31.5, 31, -35.5, 45, -37, 45, -37, 54.5, -26, 73.4, -26, 76, -7.89999, 76, -1, 64.6, -1, 64, 47, 29, 47, 28.2, 84, 12.3, 84, 11.4, 91.3, 9, 95.3, 9, 108.3, 20, 117, 20, 133, 0, 134.5, 0, 140.5, -21, 142, -21, 142, -49.5, 138, -57.5, 138, -61.2, 134, -63.3, 134, -64.5, 106.3, -72, 95.3, -72, 35, -91.5, 35, -92.9)

[connection signal="mouse_entered" from="Up" to="." method="_on_up_mouse_entered"]
[connection signal="mouse_exited" from="Up" to="." method="_on_up_mouse_exited"]
[connection signal="mouse_entered" from="Down" to="." method="_on_down_mouse_entered"]
[connection signal="mouse_exited" from="Down" to="." method="_on_down_mouse_exited"]
[connection signal="mouse_entered" from="Left" to="." method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="Left" to="." method="_on_left_mouse_exited"]
[connection signal="mouse_entered" from="Right" to="." method="_on_right_mouse_entered"]
[connection signal="mouse_exited" from="Right" to="." method="_on_right_mouse_exited"]
